# btc-lending-protocol

./: Cargo.toml  development.sh  dfx.json
btc/: Cargo.toml
common/: Cargo.toml
crypto_oracle/: candid.did  go.main  go.mod  go.sum  main.mo
examples/rust/: build.sh
internet_identity/: internet_identity.did  internet_identity.wasm
protocol/: Cargo.toml  candid.did
protocol-rs/: Cargo.toml  candid.did
protocol-rs/src/: main.rs  management_canister.rs  types.rs
protocol/common/: Cargo.toml
protocol/common/src/: main.rs
protocol/src/: Main.mo  Oracle.mo  Types.mo  main.rs  management_canister.rs  oracle.rs  pool.rs  types.rs  vault.rs  vault_canister.rs  wallet.rs
scripts/: build-btc.sh  build-canister.sh  build-common.sh  build-example-common.sh  build-example.sh  build-protocol-rs.sh  build-protocol.sh  build-vault.sh
vault/: Cargo.toml  candid.did
vault/src/: main.rs
