[package]
edition = "2021"
name = "protocol-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27.1"
example-common = {path = "../examples/common"}
hex = "0.4.3"
ic-btc-types = {path = "../types"}
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
num-bigint = "0.4"
num-traits = "0.2.14"
serde = "1.0.132"

[dev-dependencies]
bitcoin = {version = "0.27.1", features = ["rand"]}
