[package]
edition = "2021"
name = "protocol"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27.1"
example-common = {path = "../examples/common"}
hex = "0.4.3"
ic-btc-types = {path = "../types"}
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
secp256k1 = {version = "0.22.1", feature = ["rand-std"]}
serde = "1.0.132"

[dev-dependencies]
bitcoin = {version = "0.27.1", features = ["rand"]}
